Renewal _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
+title: Luce in altis
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: https://long-haul.netlify.app
+url: https://kmu.hwstage.com
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
@@ -22,11 +22,8 @@ navigation:
     url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
-  linkedin: brianmaierjr
+  github: hwstage
+  email: hwstage@kookmin.ac.kr
 
 google_analytics: "UA-58263416-1"
 
