--- a/_config.yml
+++ b/_config.yml
@@ -27,5 +27,7 @@ social:
 
 google_analytics: "UA-58263416-1"
 
-disqus:
-    shortname: brianmaierjr
+comment:
+  provider: "disqus"
+  disqus:
+    shortname: "hwstage"
